--- a/public/assignment/views/forms/fields.view.html
+++ b/public/assignment/views/forms/fields.view.html
@@ -1,181 +1,117 @@
-
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+<html lang="en" ng-controller="FieldController">
 
 
-    <title>Fields- FormMaker</title>
+<h1>Forms:Registration Form</h1>
 
-    <!-- Bootstrap core CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-
-
-    <!-- Custom styles for this template -->
-    <link href="dashboard.css" rel="stylesheet">
-
-
-</head>
-
-<body>
-
-
-
-<div class="container-fluid">
-    <div class="row">
-
-
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <div class="row">
-            <h1 class="page-header">Forms - Registration Form</h1>
-            <ul class="nav nav-tabs">
-                <li role="presentation" ><a href="forms.html">Forms</a></li>
-                <li role="presentation" class="active"><a href="fields.html">Fields</a></li>
-            </ul>
-
-            <form class="form-horizontal">
-
-
-                <div class="form-group">
-                    <div class="col-sm-12">
-                    <label for="inputfirstname">First Name:</label></div>
-                <div class="col-sm-12">
-                        <input type="text"  id="inputfirstname" placeholder="First Name">
-                         <div class="pull-right text-nowrap">
-                         <span class="glyphicon glyphicon-pencil btn btn-success"></span>
-                         <span class="glyphicon glyphicon-plus btn btn-primary"></span>
-                         <span class="glyphicon glyphicon-remove btn btn-danger"></span>
-                         <span class="glyphicon glyphicon-align-justify btn btn-warning"></span>
-                         </div>
-                    </div>
-                </div>
-
-
-                <div class="form-group">
-                    <div class="col-sm-12">
-                    <label for="inputlastname">Last Name:</label></div>
-                    <div class="col-sm-12">
-                        <input type="text"  id="inputlastname" placeholder="Last Name">
-                        <div class="pull-right text-nowrap">
-                            <span class="glyphicon glyphicon-pencil btn btn-success"></span>
-                            <span class="glyphicon glyphicon-plus btn btn-primary"></span>
-                            <span class="glyphicon glyphicon-remove btn btn-danger"></span>
-                            <span class="glyphicon glyphicon-align-justify btn btn-warning"></span>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="form-group">
-                    <div class="col-sm-12">
-                    <label for="inputdob">Date of Birth:</label></div>
-                    <div class="col-sm-12">
-                        <input type="date"  id="inputdob">
-                        <div class="pull-right text-nowrap">
-                            <span class="glyphicon glyphicon-pencil btn btn-success"></span>
-                            <span class="glyphicon glyphicon-plus btn btn-primary"></span>
-                            <span class="glyphicon glyphicon-remove btn btn-danger"></span>
-                            <span class="glyphicon glyphicon-align-justify btn btn-warning"></span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="col-sm-12">
-                    <label>Gender:</label></div>
-                    <div class="col-sm-12">
-                        <select>
-                            <option value="Female">Female</option>
-                            <option value="Male">Male</option>
-                        </select>
-                        <div class="pull-right text-nowrap">
-                            <span class="glyphicon glyphicon-pencil btn btn-success"></span>
-                            <span class="glyphicon glyphicon-plus btn btn-primary"></span>
-                            <span class="glyphicon glyphicon-remove btn btn-danger"></span>
-                            <span class="glyphicon glyphicon-align-justify btn btn-warning"></span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="col-sm-12">
-                        <label>Roles:</label></div>
-
-                    <div class="col-sm-12">
-                        <label><input type="checkbox" name="role"/>User</label>
-                        <div class="pull-right text-nowrap">
-                            <span class="glyphicon glyphicon-pencil btn btn-success"></span>
-                            <span class="glyphicon glyphicon-plus btn btn-primary"></span>
-                            <span class="glyphicon glyphicon-remove btn btn-danger"></span>
-                            <span class="glyphicon glyphicon-align-justify btn btn-warning"></span>
-                        </div>
-                        </div>
-                    <div class="col-sm-12">
-                        <label><input type="checkbox" name="role"/>Admin</label></div>
-                    <div class="col-sm-12">
-                        <label><input type="checkbox" name="role"/>Student</label></div>
-
-
-                    </div>
-
-
-                <div class="form-group">
-                    <div class="col-sm-12">
-                    <label>License Agreement:</label></div>
-
-                    <div class="col-sm-12">
-                        <input id="yes" type="radio" name="license"/> <label for="yes">Yes</label>
-                        <label><input type="radio" name="license"/> No</label>
-                        <div class="pull-right text-nowrap">
-                            <span class="glyphicon glyphicon-pencil btn btn-success"></span>
-                            <span class="glyphicon glyphicon-plus btn btn-primary"></span>
-                            <span class="glyphicon glyphicon-remove btn btn-danger"></span>
-                            <span class="glyphicon glyphicon-align-justify btn btn-warning"></span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="col-sm-12">
-                    <label>Add New Field:</label></div>
-
-                    <div class="col-sm-12">
-                        <select>
-                            <option name="text">Single Line Text</option>
-                            <option name="date">Date</option>
-                            <option name="dropdown">DropDown</option>
-                            <option name="checkbox">CheckBox</option>
-                            <option name="radio">Radio Button</option>
-                            <option name="paragraph">Paragraph</option>
-                        </select>
-                        <div class="pull-right text-nowrap">
-
-                            <span class="glyphicon glyphicon-plus btn btn-primary"></span>
-                         </div>
-                    </div>
-                </div>
-
-
-
-            </form>
-
-
-
-        </div>
+<ul class="nav nav-tabs">
+    <li role="presentation"><a href="#/form">Forms</a></li>
+    <li role="presentation" class="active"><a>Fields</a></li>
+</ul>
+<br>
+<form>
+    <div class="form-group">
+        <label for="First Name">First Name</label>
+        <br>
+        <input type="text" id="First Name" placeholder="First Name">
+        <div class="pull-right">
+            <a href="#"><span class="glyphicon glyphicon-pencil"></span></a>
+            <a href="#"><span class="glyphicon glyphicon-plus"></span></a>
+            <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
+            <a href="#"><span class="glyphicon glyphicon-align-justify"></span></a>
         </div>
     </div>
-</div>
 
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> 
+    <div class="form-group">
+        <label for="Last Name">Last Name</label>
+        <br>
+        <input type="text" id="Last Name" placeholder="Last Name">
+        <div class="pull-right">
+            <a href="#"><span class="glyphicon glyphicon-pencil"></span></a>
+            <a href="#"><span class="glyphicon glyphicon-plus"></span></a>
+            <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
+            <a href="#"><span class="glyphicon glyphicon-align-justify"></span></a>
+        </div>
+    </div>
 
-</body>
+    <div class="form-group">
+        <label for="DOB">Date Of Birth</label>
+        <br>
+        <input type="date" id="DOB">
+        <div class="pull-right">
+            <a href="#"><span class="glyphicon glyphicon-pencil"></span></a>
+            <a href="#"><span class="glyphicon glyphicon-plus"></span></a>
+            <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
+            <a href="#"><span class="glyphicon glyphicon-align-justify"></span></a>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label>Gender</label>
+        <br>
+        <select>
+            <option value="Male">Male</option>
+            <option value="Female">Female</option>
+        </select>
+        <div class="pull-right">
+            <a href="#"><span class="glyphicon glyphicon-pencil"></span></a>
+            <a href="#"><span class="glyphicon glyphicon-plus"></span></a>
+            <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
+            <a href="#"><span class="glyphicon glyphicon-align-justify"></span></a>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label>Roles</label>
+        <br>
+        <input type="checkbox" name="roles" value="Admin">Admin
+        <br>
+        <input type="checkbox" name="roles" value="Student">Student
+        <br>
+        <input type="checkbox" name="roles" value="User">User
+        <div class="pull-right">
+            <a href="#"><span class="glyphicon glyphicon-pencil"></span></a>
+            <a href="#"><span class="glyphicon glyphicon-plus"></span></a>
+            <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
+            <a href="#"><span class="glyphicon glyphicon-align-justify"></span></a>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label>License Agreement</label>
+        <br>
+        <input type="radio" name="agreement" value="Yes">Yes
+        <br>
+        <input type="radio" name="agreement" value="No">No
+        <br>
+        <div class="pull-right">
+            <a href="#"><span class="glyphicon glyphicon-pencil"></span></a>
+            <a href="#"><span class="glyphicon glyphicon-plus"></span></a>
+            <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
+            <a href="#"><span class="glyphicon glyphicon-align-justify"></span></a>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label>Add New Field</label>
+        <br>
+        <select>
+            <option value="single-line-text">Single Line Text</option>
+            <option value="Date">Date</option>
+            <option value="Dropdown">Dropdown</option>
+            <option value="checkbox">Checkbox</option>
+            <option value="Radio-button">Radio Button</option>
+            <option value="Paragraph-text-field">Paragraph Text Field</option>
+        </select>
+        <div class="pull-right">
+            <a href="#"><span class="glyphicon glyphicon-plus"></span></a>
+        </div>
+    </div>
+
+    <div>
+        <div align="center">
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+    </div>
+</form>
 </html>
