--- a/public/assignment/views/forms/forms.view.html
+++ b/public/assignment/views/forms/forms.view.html
@@ -1,112 +1,37 @@
+<div ng-controller = "FormController">
+    <h1>Forms</h1>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <div ng-show="alertMessage" class="alert alert-danger" role="alert">{{alertMessage}}</div>
 
+    <ul class="nav nav-tabs">
+        <li role="presentation" class="active"><a>Forms</a></li>
+        <li role="presentation"><a href="#/fields">Fields</a></li>
+    </ul>
 
-    <title>Forms - FormMaker</title>
+    <div class="table-responsive">
+        <table class="table table-striped table-bordered">
+            <tr>
+                <th>
+                    <div class="pull-left"><a href="#"><span class="glyphicon glyphicon-triangle-bottom"></span></a></div>
+                    Form Name
+                </th>
+                <th>Action</th>
+            </tr>
 
-    <!-- Bootstrap core CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+            <tr>
+                <td><input type="text" ng-model="formName" placeholder="Form Name"></td>
+                <td><a ng-click="addForm(formName)"><span class="glyphicon glyphicon-plus"></span></a>
+                    <a ng-click="updateForm(formName)"><span class="glyphicon glyphicon-ok"></span></a>
+                </td>
+            </tr>
 
+            <tr ng-repeat="form in forms">
+                <td><a>{{form.title}}</a></td>
+                <td><a ng-click="deleteForm($index)"><span class="glyphicon glyphicon-remove"></span></a>
+                    <a ng-click="selectForm($index)"><span class="glyphicon glyphicon-pencil"></span></a>
+                </td>
+            </tr>
 
-    <!-- Custom styles for this template -->
-    <link href="dashboard.css" rel="stylesheet">
-
-
-</head>
-
-<body>
-
-
-
-<div class="container-fluid">
-    <div class="row">
-
-        </div>
-
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h1 class="page-header">Forms</h1>
-            <ul class="nav nav-tabs">
-                <li role="presentation" class="active"><a href="forms.html">Forms</a></li>
-                <li role="presentation"><a href="fields.html">Fields</a></li>
-            </ul>
-            <div class="table-responsive">
-            <table class="table table-striped table-bordered">
-                <thead>
-                <tr>
-                    <th>Form Name</th>
-                    <th>Action</th>
-
-                </tr>
-                </thead>
-                <tr>
-
-                    <td><input class="form-control" type="text" name="UserName" placeholder="UserName"/></td>
-                    </td>
-                    <td>
-                        <a href="#" class="btn btn-success">
-                            <scan class="glyphicon glyphicon-ok"></scan>
-                        </a>
-                        <a href="#" class="btn btn-primary">
-                            <scan class="glyphicon glyphicon-plus"></scan>
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td> <a href="fields.html"> Registration Form</a></td>
-                    <td>
-                        <a href="#" class="btn btn-success">
-                            <scan class="glyphicon glyphicon-pencil"></scan>
-                        </a>
-                        <a href="#" class="btn btn-primary">
-                            <scan class="glyphicon glyphicon-remove"></scan>
-                        </a>
-                    </td>
-                </tr>
-
-                    <td><a href="fields.html"> Contact List</a></td>
-                    <td>
-                        <a href="#" class="btn btn-success">
-                            <scan class="glyphicon glyphicon-pencil"></scan>
-                        </a>
-                        <a href="#" class="btn btn-primary">
-                            <scan class="glyphicon glyphicon-remove"></scan>
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td><a href="fields.html">To Do List</a></td>
-                    <td>
-                        <a href="#" class="btn btn-success">
-                            <scan class="glyphicon glyphicon-pencil"></scan>
-                        </a>
-                        <a href="#" class="btn btn-primary">
-                            <scan class="glyphicon glyphicon-remove"></scan>
-                        </a>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-
-
-
-            </div>
-        </div>
+        </table>
     </div>
 </div>
-
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> 
-
-</body>
-</html>
