--- a/public/assignment/views/header/header.view.html
+++ b/public/assignment/views/header/header.view.html
@@ -8,17 +8,26 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Form Maker</a>
+            <a class="navbar-brand" href="#/home">Form Maker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#/register">Register</a></li>
-                <li><a href="#/login">Login</a></li>
-                <li><a href="#/profile">Username</a></li>
-                <li><a href="#/login">Logout</a></li>
+                <li ng-hide="currentUser" ng-class="{'active': $location.url() == '/register'}" data-toggle="collapse" data-target=".navbar-collapse.in">
+                    <a href="#/register"> Register</a></li>
+
+                <li ng-hide="currentUser" ng-class="{'active': $location.url() == '/login'}" data-toggle="collapse" data-target=".navbar-collapse.in">
+                    <a href="#/login"> Login</a></li>
+
+                <li ng-show="currentUser" ng-class="{'active': $location.url() == '/profile'}" data-toggle="collapse" data-target=".navbar-collapse.in">
+                    <a href="#/profile">{{currentUser.username}}</a></li>
+
+                <li ng-show="currentUser" data-toggle="collapse" data-target=".navbar-collapse.in">
+                    <a href="#/home" ng-click="logout()"> Logout</a></li>
             </ul>
 
         </div>
     </div>
 </nav>
 </body>
+
+
