--- a/public/assignment/views/users/profile.view.html
+++ b/public/assignment/views/users/profile.view.html
@@ -1,48 +1,26 @@
 
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+<html lang="en" ng-controller="ProfileController">
 
-
-    <title>Profile - FormMaker</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-
-
-    <!-- Custom styles for this template -->
-    <link href="dashboard.css" rel="stylesheet">
-
-
-</head>
 
 <body>
 
-
-
-<div class="container-fluid">
-    <div class="row">
-
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">Profile</h1>
-            <form class="form-horizontal" action="profile.html">
+
+
+            <div ng-show="message" class="alert alert-success" role="alert">{{message}}</div>
+            <form class="form-horizontal" >
                 <div class="form-group">
                     <label for="inputusername" class="col-sm-2 control-label">Username</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="inputusername" placeholder="Username">
+                        <input type="text" ng-model="username" class="form-control" id="inputusername" placeholder="Username">
                     </div>
 
                 </div>
                 <div class="form-group">
                     <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                        <input type="password" ng-model="password" class="form-control" id="inputPassword3" placeholder="Password">
                     </div>
                 </div>
 
@@ -50,39 +28,30 @@
                 <div class="form-group">
                     <label for="inputfirst" class="col-sm-2 control-label">First Name</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="inputfirst" placeholder="First Name">
+                        <input type="text" ng-model="firstName" class="form-control" id="inputfirst" placeholder="First Name">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label for="inputlast" class="col-sm-2 control-label">Last Name</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputlast" placeholder="Last Name">
+                        <input type="text" ng-model="lastName" class="form-control" id="inputlast" placeholder="Last Name">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label for="inputEmail" class="col-sm-2 control-label">Email</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+                        <input type="email" ng-model="email" class="form-control" id="inputEmail" placeholder="Email">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary btn-block">Update</button>
+                        <a ng-click="update(username,password,firstName,lastName,email)" class="btn btn-primary btn-block" role="button">Update</a>
                     </div>
                 </div>
             </form>
-        </div>
-    </div>
-</div>
-
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> 
 
 </body>
 </html>
