--- a/public/assignment/views/users/register.view.html
+++ b/public/assignment/views/users/register.view.html
@@ -1,80 +1,50 @@
 
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+<html lang="en" ng-controller="RegisterController">
 
-
-    <title>Register - FormMaker</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-
-
-    <!-- Custom styles for this template -->
-    <link href="../../dashboard.css" rel="stylesheet">
-
-
-</head>
 
 <body>
 
-
-
-<div class="container-fluid">
-    <div class="row">
-
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+            <div ng-show="message" class="alert alert-danger" role="alert">{{message}}</div>
             <h1 class="page-header">Register</h1>
-        <form class="form-horizontal">
-            <div class="form-group" ng-model="">
-                <label for="inputusername" class="col-sm-2 control-label">Username</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="inputusername" placeholder="Username">
+
+            <form class="form-horizontal">
+                <div class="form-group">
+                    <label for="username" class="col-sm-2 control-label">Username</label>
+                    <div class="col-sm-10">
+                        <input type="text" ng-model="user.username" class="form-control" id="username" placeholder="Username">
+                    </div>
                 </div>
 
-            </div>
-            <div class="form-group">
-                <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-                <div class="col-sm-10">
-                    <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                <div class="form-group">
+                    <label for="inputPassword" class="col-sm-2 control-label">Password</label>
+                    <div class="col-sm-10">
+                        <input type="password" ng-model="user.password" class="form-control" id="inputPassword" placeholder="Password">
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-                <label for="inputPassword4" class="col-sm-2 control-label">Verify Password</label>
-                <div class="col-sm-10">
-                    <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+                <div class="form-group text-nowrap">
+                    <label for="password2" class="col-sm-2 control-label">Verify Password</label>
+                    <div class="col-sm-10">
+                        <input type="password" ng-model="user.password2" class="form-control" id="password2" placeholder="Verify Password">
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-                <label for="inputEmail" class="col-sm-2 control-label">Email</label>
-                <div class="col-sm-10">
-                    <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+                <div class="form-group">
+                    <label for="email" class="col-sm-2 control-label">Email</label>
+                    <div class="col-sm-10">
+                        <input type="email" ng-model="user.email" class="form-control" id="email" placeholder="Email">
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-primary btn-block" ng-click="register()">Register</button>
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <a ng-click="register(user)" class="btn btn-primary btn-block" role="button">Register</a>
+                    </div>
                 </div>
-            </div>
-        </form>
-            </div>
-    </div>
-</div>
+            </form>
 
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> 
+
 
 </body>
 </html>
