--- a/public/assignment/views/admin/admin.view.html
+++ b/public/assignment/views/admin/admin.view.html
@@ -1,6 +1,5 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,112 +8,107 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-
-    <title>Admin - FormMaker</title>
+    <title>Admin-FormMaker</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 
-
     <!-- Custom styles for this template -->
-    <link href="dashboard.css" rel="stylesheet">
-
+    <link href="../../css/dashboard.css" rel="stylesheet">
 
 </head>
 
 <body>
 
-
 <div class="container-fluid">
     <div class="row">
 
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h1 class="page-header">Admin</h1>
-            <h3 class="page-header">Users</h3>
-            <div class="table-responsive">
-            <table class="table table-stripped table-bordered">
-                <thead>
-                <tr>
-                    <th><a href="#"><span class="glyphicon glyphicon-triangle-bottom"></span></a>
-                    UserName</th>
-                    <th><a href="#"><span class="glyphicon glyphicon-triangle-bottom"></span></a>
-                        Password</th>
-                    <th><a href="#"><span class="glyphicon glyphicon-triangle-bottom"></span></a>
-                        Role</th>
-                    <th style="white-space: nowrap">Action</th>
+        <h1>Admin</h1>
+        <h3>Users</h3>
 
-                </tr>
-                </thead>
-                <tr>
-                <td><input class="form-control" type="text" name="UserName" placeholder="UserName"/></td>
-                <td><input class="form-control" type="password" name="Password" placeholder="Password"/></td>
-                <td><input class="form-control" type="text" name="role" placeholder="role1, role2">
+        <div class="table-responsive">
+            <table class="table table-striped table-hover table-bordered table-condensed">
 
-                </td>
-                <td style="white-space: nowrap">
-                    <a href="#" class="btn btn-success">
-                        <scan class="glyphicon glyphicon-ok"></scan>
-                    </a>
-                    <a href="#" class="btn btn-primary">
-                        <scan class="glyphicon glyphicon-plus"></scan>
-                    </a>
-                </td>
-                </tr>
                 <tr>
-                    <td>Alice</td>
-                    <td></td>
-                    <td>Student</td>
-                    <td style="white-space: nowrap">
-                        <a href="#" class="btn btn-warning">
-                            <scan class="glyphicon glyphicon-pencil"></scan>
+                    <th bgcolor="gray">
+                        <a href="#"><span class="glyphicon glyphicon-triangle-bottom"></span></a>
+                        Username
+                    </th>
+
+                    <th bgcolor="gray">
+                        <a href="#"><span class="glyphicon glyphicon-triangle-bottom"></span>
                         </a>
-                        <a href="#" class="btn btn-danger">
-                            <scan class="glyphicon glyphicon-remove"></scan>
-                        </a>
-                    </td>
+                        Password
+                    </th>
+                    <th bgcolor="gray">
+                        <a href="#"><span class="glyphicon glyphicon-triangle-bottom"></span></a>
+                        Role
+                    </th>
+                    <th bgcolor="gray">
+                        <a href="#"><span class="glyphicon glyphicon-triangle-bottom"></span></a>
+                        Action
+                    </th>
                 </tr>
+
                 <tr>
-                    <td>Bob</td>
-                    <td></td>
-                    <td>Faculty | Admin</td>
-                    <td style="white-space: nowrap">
-                        <a href="#" class="btn btn-warning">
-                            <scan class="glyphicon glyphicon-pencil"></scan>
-                        </a>
-                        <a href="#" class="btn btn-danger">
-                            <scan class="glyphicon glyphicon-remove"></scan>
-                        </a>
-                    </td>
+                    <td> <input type="text" placeholder="username" class="form-control"></td>
+                    <td> <input type="password" placeholder="password" class="form-control"></td>
+                    <td> <input type="text" placeholder="role1,role2" class="form-control"></td>
+                    <td class="text-nowrap">
+                        <button type="button" class="btn btn-primary add-right-pad">
+                            <span class="glyphicon glyphicon-plus"></span>
+                        </button>
+                        <button type="button" class="btn btn-success">
+                            <span class="glyphicon glyphicon-ok"></span>
+                        </button></td>
                 </tr>
+
                 <tr>
-                    <td>Charlie</td>
-                    <td></td>
-                    <td></td>
-                    <td style="white-space: nowrap">
-                        <a href="#" class="btn btn-warning">
-                            <scan class="glyphicon glyphicon-pencil"></scan>
-                        </a>
-                        <a href="#" class="btn btn-danger">
-                            <scan class="glyphicon glyphicon-remove"></scan>
-                        </a>
+                    <td>alice</td>
+                    <td>&nbsp;</td>
+                    <td>student</td>
+                    <td class="text-nowrap">
+                        <button type="button" class="btn btn-danger add-right-pad">
+                            <span class="glyphicon glyphicon-remove"></span>
+                        </button>
+                        <button type="button" class="btn btn-info add-right-pad">
+                            <span class="glyphicon glyphicon-pencil"></span>
+                        </button>
                     </td>
                 </tr>
 
-                </tbody>
+                <tr>
+                    <td>bob</td>
+                    <td>&nbsp;</td>
+                    <td> faculty|student</td>
+                    <td class="text-nowrap">
+                        <button type="button" class="btn btn-danger add-right-pad">
+                            <span class="glyphicon glyphicon-remove"></span>
+                        </button>
+                        <button type="button" class="btn btn-info add-right-pad">
+                            <span class="glyphicon glyphicon-pencil"></span>
+                        </button>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>charlie</td>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
+                    <td class="text-nowrap">
+                        <button type="button" class="btn btn-danger add-right-pad">
+                            <span class="glyphicon glyphicon-remove"></span>
+                        </button>
+                        <button type="button" class="btn btn-info add-right-pad">
+                            <span class="glyphicon glyphicon-pencil"></span>
+                        </button>
+                    </td>
+                </tr>
+
             </table>
-            </div>
-
-
-
         </div>
     </div>
 </div>
-
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> 
 
 </body>
 </html>
