--- a/public/assignment/views/forms/forms.view.html
+++ b/public/assignment/views/forms/forms.view.html
@@ -1,37 +1,52 @@
-<div ng-controller = "FormController">
-    <h1>Forms</h1>
+<html>
 
-    <div ng-show="alertMessage" class="alert alert-danger" role="alert">{{alertMessage}}</div>
+<body ng-controller="FormController">
+    <div class="row">
+            <h1 class="page-header">Forms</h1>
 
-    <ul class="nav nav-tabs">
-        <li role="presentation" class="active"><a>Forms</a></li>
-        <li role="presentation"><a href="#/fields">Fields</a></li>
-    </ul>
+            <ul class="nav nav-tabs">
+                <li role="presentation" class="active"><a>Forms</a></li>
+                <li role="presentation"><a href="#/fields">Fields</a></li>
+            </ul>
 
-    <div class="table-responsive">
-        <table class="table table-striped table-bordered">
-            <tr>
-                <th>
-                    <div class="pull-left"><a href="#"><span class="glyphicon glyphicon-triangle-bottom"></span></a></div>
-                    Form Name
-                </th>
-                <th>Action</th>
-            </tr>
+            <div class="table-responsive">
+                <table class="table table-striped table-bordered table-condensed">
+                        <tr>
+                            <th bgcolor="gray">
+                                <a href="#">
+                                    <span class="glyphicon glyphicon-triangle-bottom"></span>
+                                </a>
+                                Form Name
+                            </th>
+                            <th bgcolor="gray">
+                                <a href="#">
+                                    <span class="glyphicon glyphicon-triangle-bottom"></span>
+                                </a>
+                                Action
+                            </th>
+                        </tr>
+                        <tr>
+                            <td><input type="text" placeholder="Form name" class="form-control" ng-model="formName"></td>
+                            <td class="text-nowrap">
+                                <button type="button" class="btn btn-primary add-right-pad" ng-click="addForm(formName)">
+                                    <span class="glyphicon glyphicon-plus"></span>
+                                </button>
+                                <button type="button" class="btn btn-success" ng-click="updateForm(formName)">
+                                    <span class="glyphicon glyphicon-ok"></span>
+                                </button></td>
+                        </tr>
 
-            <tr>
-                <td><input type="text" ng-model="formName" placeholder="Form Name"></td>
-                <td><a ng-click="addForm(formName)"><span class="glyphicon glyphicon-plus"></span></a>
-                    <a ng-click="updateForm(formName)"><span class="glyphicon glyphicon-ok"></span></a>
-                </td>
-            </tr>
+                       <tr ng-repeat="form in forms">
+                           <td><a>{{form.title}} </a></td>
+                           <td>
+                               <a ng-click="deleteForm($index)"><span class="glyphicon glyphicon-remove"></span></a>
+                               <a ng-click="selectForm($index)"><span class="glyphicon glyphicon-pencil"></span></a></td>
+                       </tr>
+                </table>
 
-            <tr ng-repeat="form in forms">
-                <td><a>{{form.title}}</a></td>
-                <td><a ng-click="deleteForm($index)"><span class="glyphicon glyphicon-remove"></span></a>
-                    <a ng-click="selectForm($index)"><span class="glyphicon glyphicon-pencil"></span></a>
-                </td>
-            </tr>
+             </div>
+        </div>
+</body>
 
-        </table>
-    </div>
-</div>
+</html>
+
