--- a/public/assignment/views/sidebar/sidebar.view.html
+++ b/public/assignment/views/sidebar/sidebar.view.html
@@ -1,21 +1,15 @@
-<!DOCTYPE html>
 <html>
-<body ng-controller="SidebarController">
+<body ng-controller="SideBarController" class="nav nav-sidebar">
+<div class="col-sm-3 col-md-2 sidebar">
     <ul class="nav nav-sidebar">
-        <li ng-class="{'active': $location.url() == '/home'}"><a href="#/home">Home</a></li>
-
-        <li ng-show="currentUser"
-            ng-class="{'active': $location.url() == '/profile'}"><a href="#/profile">Profile</a></li>
-
-        <li ng-show="currentUser.roles.indexOf('admin') >= 0"
-            ng-class="{'active': $location.url() == '/admin'}"><a href="#/admin">Admin</a></li>
-
-        <li ng-show="currentUser"
-            ng-class="{'active': $location.url() == '/form'}"><a href="#/form">Forms</a></li>
+        <li ng-class="{'active' : $location.url() == '/home'}"><a href="#/home">Home</a></li>
+        <li ng-show="currentUser" ng-class="{'active' : $location.url() == '/profile'}">
+            <a href="#/profile">Profile</a></li>
+        <li ng-show="currentUser.roles.indexOf('admin')>=0" ng-class="{'active' : $location.url() == '/admin'}">
+            <a href="#/admin">Admin</a></li>
+        <li ng-show="currentUser" ng-class="{'active' : $location.url() == '/form'}" >
+            <a href="#/form">Forms</a></li>
     </ul>
 </div>
 </body>
 </html>
-
-
-
