--- a/public/assignment/views/users/login.view.html
+++ b/public/assignment/views/users/login.view.html
@@ -1,33 +1,38 @@
+<html>
+<body ng-controller="LoginController">
 
-<!DOCTYPE html>
-<html lang="en" ng-controller="LoginController">
+<div class="container-fluid">
+    <div class="row">
 
-
+           <div ng-show="message" class="alert">{{message}}</div>
             <h1 class="page-header">Login</h1>
-
-            <div ng-show="message" class="alert alert-success" role="alert">{{message}}</div>
-
-            <form class="form-horizontal" >
+            <form class="form-horizontal">
                 <div class="form-group">
-                    <label for="inputusername" class="col-sm-2 control-label">Username</label>
+                    <label class="col-sm-2 control-label" for="uname"> UserName</label>
                     <div class="col-sm-10">
-                        <input type="text" ng-model="user.username" class="form-control" id="inputusername" placeholder="Username">
-                    </div>
-
-                </div>
-                <div class="form-group">
-                    <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-                    <div class="col-sm-10">
-                        <input type="password" ng-model="user.password" class="form-control" id="inputPassword3" placeholder="Password">
+                        <input type="text" class="form-control" placeholder="UserName" id="uname" ng-model="user.username">
                     </div>
                 </div>
 
+                <div class="form-group">
+                    <label class="col-sm-2 control-label" for="password">Password</label>
+                    <div class="col-sm-10">
+                        <input type="password" class="form-control" placeholder="Password" id="password" ng-model="user.password">
+                    </div>
+                </div>
 
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <a ng-click="login(user)" class="btn btn-primary btn-block" role="button">Login</a>
+                        <a class="btn btn-primary" role="button" ng-click="login(user)">Login</a>
                     </div>
                 </div>
-            </form>
 
+            </form>
+        </div>
+
+</div>
+</div>
+
+</body>
 </html>
+
