--- a/public/assignment/views/users/profile.view.html
+++ b/public/assignment/views/users/profile.view.html
@@ -1,57 +1,59 @@
 
-<!DOCTYPE html>
-<html lang="en" ng-controller="ProfileController">
+<html>
 
+<body ng-controller="ProfileController">
 
-<body>
-
+<div class="container-fluid">
+    <div class="row">
             <h1 class="page-header">Profile</h1>
-
-
             <div ng-show="message" class="alert alert-success" role="alert">{{message}}</div>
-            <form class="form-horizontal" >
+            <form class="form-horizontal">
                 <div class="form-group">
-                    <label for="inputusername" class="col-sm-2 control-label">Username</label>
+                    <label class="col-sm-2 control-label" for="uname"> UserName</label>
                     <div class="col-sm-10">
-                        <input type="text" ng-model="username" class="form-control" id="inputusername" placeholder="Username">
-                    </div>
-
-                </div>
-                <div class="form-group">
-                    <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-                    <div class="col-sm-10">
-                        <input type="password" ng-model="password" class="form-control" id="inputPassword3" placeholder="Password">
-                    </div>
-                </div>
-
-
-                <div class="form-group">
-                    <label for="inputfirst" class="col-sm-2 control-label">First Name</label>
-                    <div class="col-sm-10">
-                        <input type="text" ng-model="firstName" class="form-control" id="inputfirst" placeholder="First Name">
+                        <input type="text" class="form-control" placeholder="UserName" id="uname" ng-model="userName">
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label for="inputlast" class="col-sm-2 control-label">Last Name</label>
+                    <label class="col-sm-2 control-label" for="password">Password</label>
                     <div class="col-sm-10">
-                        <input type="text" ng-model="lastName" class="form-control" id="inputlast" placeholder="Last Name">
+                        <input type="password" class="form-control" placeholder="Password" id="password" ng-model="password">
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label for="inputEmail" class="col-sm-2 control-label">Email</label>
+                    <label class="col-sm-2 control-label" for="fname">First Name</label>
                     <div class="col-sm-10">
-                        <input type="email" ng-model="email" class="form-control" id="inputEmail" placeholder="Email">
+                        <input type="text" class="form-control" placeholder="First Name" id="fname" ng-model="firstName">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-sm-2 control-label" for="lname">Last Name</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" placeholder="Last Name" id="lname" ng-model="lastName">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-sm-2 control-label" for="email">Email</label>
+                    <div class="col-sm-10">
+                        <input type="email" class="form-control" placeholder="youremail@domain.com" id="email" ng-model="email">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <a ng-click="update(username,password,firstName,lastName,email)" class="btn btn-primary btn-block" role="button">Update</a>
+                        <button type="button" class="btn btn-primary" ng-click="update(userName,password,firstName,lastName,email)">Update</button>
                     </div>
                 </div>
+
             </form>
+
+    </div>
+</div>
 
 </body>
 </html>
+
