--- a/public/assignment/views/users/register.view.html
+++ b/public/assignment/views/users/register.view.html
@@ -1,50 +1,49 @@
 
-<!DOCTYPE html>
-<html lang="en" ng-controller="RegisterController">
-
-
-<body>
-
-            <div ng-show="message" class="alert alert-danger" role="alert">{{message}}</div>
-            <h1 class="page-header">Register</h1>
-
+<html>
+<body ng-controller="RegisterController">
+<div ng-show="message" class="alert alert-success" role="alert">{{message}}</div>
+ <h1 class="page-header">Register</h1>
             <form class="form-horizontal">
                 <div class="form-group">
-                    <label for="username" class="col-sm-2 control-label">Username</label>
+                    <label class="col-sm-2 control-label" for="uname"> UserName</label>
                     <div class="col-sm-10">
-                        <input type="text" ng-model="user.username" class="form-control" id="username" placeholder="Username">
+                        <input type="text" class="form-control" placeholder="Username"
+                               id="uname" ng-model="user.username" >
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label for="inputPassword" class="col-sm-2 control-label">Password</label>
+                    <label class="col-sm-2 control-label" for="password">Password</label>
                     <div class="col-sm-10">
-                        <input type="password" ng-model="user.password" class="form-control" id="inputPassword" placeholder="Password">
-                    </div>
-                </div>
-
-                <div class="form-group text-nowrap">
-                    <label for="password2" class="col-sm-2 control-label">Verify Password</label>
-                    <div class="col-sm-10">
-                        <input type="password" ng-model="user.password2" class="form-control" id="password2" placeholder="Verify Password">
+                        <input type="password" class="form-control" placeholder="Password"
+                               id="password" ng-model="user.password">
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label for="email" class="col-sm-2 control-label">Email</label>
+                    <label class="col-sm-2 control-label" for="vpw">Verify Password</label>
                     <div class="col-sm-10">
-                        <input type="email" ng-model="user.email" class="form-control" id="email" placeholder="Email">
+                        <input type="password" class="form-control" placeholder="Verify Password"
+                               id="vpw" ng-model="user.password2">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-sm-2 control-label" for="email">Email</label>
+                    <div class="col-sm-10">
+                        <input type="email" class="form-control" placeholder="youremail@domain.com"
+                               id="email" ng-model="user.email">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <a ng-click="register(user)" class="btn btn-primary btn-block" role="button">Register</a>
+                        <a ng-click="register(user)" class="btn btn-primary" role="button">Register</a>
                     </div>
                 </div>
+
             </form>
-
-
-
 </body>
 </html>
+
+
