--- a/public/project/views/sidebar/sidebar.view.html
+++ b/public/project/views/sidebar/sidebar.view.html
@@ -11,11 +11,8 @@
         <li ng-show="currentUser.roles.indexOf('admin')>=0" ng-class="{'active' : $location.url() == '/admin'}">
             <a href="#/admin">Admin</a></li>
 
-        <li ng-show="currentUser" ng-class="{'active' : $location.url() == '/createEvent'}" >
-            <a href="#/createPlaylist">CreatePlaylist</a></li>
-
-        <li ng-show="currentUser" ng-class="{'active' : $location.url() == '/myEvents'}" >
-            <a href="#/myPlaylist">MyPlaylists</a></li>
+        <li ng-show="currentUser" ng-class="{'active' : $location.url() == '/myPlaylists'}" >
+            <a href="#/myPlaylists">MyPlaylists</a></li>
     </ul>
 </div>
 </body>
