--- a/public/assignment/client/views/forms/forms.view.html
+++ b/public/assignment/client/views/forms/forms.view.html
@@ -39,7 +39,7 @@
                         </tr>
 
                        <tr ng-repeat="form in model.forms">
-                           <td><a href="#/fields">{{form.title}} </a></td>
+                           <td><a href="#/forms/{{form._id}}/fields">{{form.title}} </a></td>
                            <td>
                                <a ng-click="model.deleteForm($index)"><span class="glyphicon glyphicon-remove"></span></a>
                                <a ng-click="model.selectForm($index)"><span class="glyphicon glyphicon-pencil"></span></a></td>
