--- a/public/assignment/client/views/forms/field.view.html
+++ b/public/assignment/client/views/forms/field.view.html
@@ -20,56 +20,84 @@
 
                                 <div ng-switch on="field.type">
                                     <input ng-switch-when="TEXT" type="text" placeholder={{field.placeholder}}>
-                                    <textarea ng-switch-when="TEXTAREA" class="form-control" rows="3"></textarea>
+                                    <textarea ng-switch-when="TEXTAREA" class="form-control" rows="3" placeholder={{field.placeholder}}></textarea>
                                     <input ng-switch-when="DATE" type="date">
                                     <input ng-switch-when="EMAIL" type="email" placeholder={{field.placeholder}}>
                                     <select ng-switch-when="OPTIONS">
-                                        <option ng-repeat="option in field.options">{{option.label}}</option>
+                                        <option ng-repeat="option in field.options track by $index">{{option.label}}</option>
                                     </select>
                                     <div class="checkbox" ng-switch-when="CHECKBOXES">
-                                        <label ng-repeat="option in field.options">
-                                            <input type="checkbox" value="">
-                                            {{option}}
+                                        <label ng-repeat="option in field.options track by $index">
+                                            <input type="checkbox" value="{{option.value}}">{{option.label}}
                                         </label>
                                     </div>
-                                    <div class="radio" ng-switch-when="RADIOBUTTONS">
-                                        <label ng-repeat="option in field.options">
-                                            <input type="radio">
-                                            {{option.label}}
+                                    <div class="radio" ng-switch-when="RADIOS">
+                                        <label ng-repeat="option in field.options track by $index">
+                                            <input type="radio" value="{{option.value}}">{{option.label}}
+                                            <br>
                                         </label>
                                     </div>
                                 </div>
                             </div>
                         </form>
                     </div>
+
                     <div class="col-xs-5">
-                        <button ng-click="model.editField(field)" href="#" class="glyphicon glyphicon-pencil"></button>
-                        <span href="#" class="glyphicon glyphicon-plus"></span>
-                        <button href="#" class="glyphicon glyphicon-remove" data-target="#myModal"></button>
-                        <span href="#" class="glyphicon glyphicon-menu-hamburger"></span>
+                        <button ng-click="model.editField(field)" data-toggle="modal" href="#"
+                                class="btn btn-primary glyphicon glyphicon-pencil" data-target="#myEdit">
+                        </button>
+                        <button data-toggle="modal" href="#"
+                                class="btn btn-success glyphicon glyphicon-plus" data-target="#">
+                        </button>
+                        <button ng-click="model.removeField(field)" href="#" class="glyphicon glyphicon-remove btn btn-danger">
+                        </button>
+                        <button href="#" class="glyphicon glyphicon-menu-hamburger btn btn-default">
+                        </button>
                     </div>
                 </div>
 
-                <!-- Modal -->
-                <div id="myModal" class="modal fade" role="dialog">
+                <div id="myEdit" class="modal fade" role="dialog">
                     <div class="modal-dialog">
-
-                        <!-- Modal content-->
                         <div class="modal-content">
+
                             <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h4 class="modal-title">Modal Header</h4>
+                                <button type="button" class="close" data-dismiss ="modal">&times;</button>
+                                <h4 class="modal-title">{{model.selectedField.label}}</h4>
                             </div>
-                            <div class="modal-body">
-                                <p>Some text in the modal.</p>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            </div>
+
+                           <div class="modal-body">
+                               <form> 
+                                       <div class="form-group">
+                                           <label>Label</label>
+                                           <input ng-model = "model.label" class="form-control" type="text" placeholder="Edit Label">
+                                       </div>
+
+                                       <div class="form-group" ng-show = "model.selectedField.placeholder">
+                                           <label>Placeholder</label>
+                                           <input ng-model = "model.placeholder" class="form-control" type="text" placeholder="Edit Placeholder">
+                                       </div>
+
+                                       <div class="form-group" ng-show="model.selectedField.options">
+                                           <label>Options</label>
+                                           <textarea ng-model="model.options" class="form-control" placeholder="Edit Options"></textarea>
+                                       </div>
+
+                                </form>
+                           </div>
+
+                                           <div class="modal-footer">
+                                               <button type="button" class="btn btn-default" ng-click="model.cancelField()" data-dismiss="modal">Close</button>
+                                               <button class="btn btn-default" ng-click="model.okayField()" data-dismiss="modal">Ok</button>
+                                           </div> 
+                                       </div> 
+                                   </div>
+                                    </form>
+                          </div>
                         </div>
 
-                    </div>
+                   </div>
                 </div>
+
 
                 <div class="row">
                     <div class="col-xs-12">
@@ -94,14 +122,15 @@
                         </form>
                     </div>
                     <div class="col-xs-5">
-                        <button ng-click="model.addField(model.fieldType)" href="#" class="glyphicon glyphicon-plus"></button>
+                        <button ng-click="model.addField(model.fieldType)" href="#" class="glyphicon glyphicon-plus
+                        btn btn-primary"></button>
                     </div>
                 </div>
 
-            </div> <!-- End of container -->
+            </div>
 
-        </div> <!-- End of main -->
-    </div> <!-- End of row-fluid-->
-</div> <!-- End of container-fluid -->
+        </div>
+    </div>
+</div>
 </body>
 </html>
