--- a/public/assignment/client/views/forms/field.view.html
+++ b/public/assignment/client/views/forms/field.view.html
@@ -51,7 +51,7 @@
                         </button>
                         <button ng-click="model.removeField(field)" href="#" class="glyphicon glyphicon-remove btn btn-danger">
                         </button>
-                        <button href="#" class="glyphicon glyphicon-menu-hamburger btn btn-default">
+                        <button class="glyphicon glyphicon-menu-hamburger btn btn-default" aria-hidden="true">
                         </button>
                     </div>
                 </div>
@@ -127,10 +127,10 @@
                     </div>
                 </div>
 
-            </div>
+            </div> <!-- End of container -->
 
-        </div>
-    </div>
-</div>
+        </div> <!-- End of main -->
+    </div> <!-- End of row-fluid-->
+</div> <!-- End of container-fluid -->
 </body>
 </html>
