--- a/public/project/client/views/search/search.view.html
+++ b/public/project/client/views/search/search.view.html
@@ -5,13 +5,13 @@
     <div class="row">
         <div class="col-xs-6">
             <h2>Search</h2>
-            <input ng-model="track" id="trackID" class="form-control" placeholder="Track"/>
+            <input ng-model="model.track" id="trackID" class="form-control" placeholder="Track"/>
             <br>
-            <a class="btn btn-primary" role="button" ng-click="searchTrack(track)">Search</a>
+            <a class="btn btn-primary" role="button" ng-click="model.searchTrack(model.track)">Search</a>
         </div>
     </div>
 
-    <section ng-show="searchResult">
+    <section ng-show="model.searchResult">
         <h3 class="text-uppercase">Track List</h3>
         <table class="table table-striped table-responsive">
             <thead>
@@ -22,17 +22,15 @@
             </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="track in searchResult.tracks.items">
-                    <td>{{track.name}}</td>
-                    <td>
-                        <!--<a href="{{track.preview_url}}">Play</a></td>-->
-                        <a href="#/details/{{track.id}}">Details</a></td>
-                    <td></td>
-                </tr>
+            <tr ng-repeat="track in model.searchResult.tracks.items">
+                <td>{{track.name}}</td>
+                <td>
+                    <!--<a href="{{track.preview_url}}">Play</a></td>-->
+                    <a href="#/details/{{track.id}}">Details</a></td>
+                <td></td>
+            </tr>
             </tbody>
         </table>
     </section>
 </div>
 </body>
-
-
