--- a/public/project/client/views/home/home.view.html
+++ b/public/project/client/views/home/home.view.html
@@ -51,10 +51,10 @@
                     <h2>Here are the hot topics</h2>
                     <div ng-repeat="trip in trips">
                     <div class="col-md-3">
-                        <div class="team-player">
+                      <!--  <div class="team-player">
                            <a href="#/trip/{{trips[$index]._id}}"><img src="../client/views/assets/paper_img/unnamed.png" alt="Thumbnail Image" class="img-circle img-responsive"></a>
                             <h5 style="margin-bottom: 5px"><a href="#/trip/{{trips[$index]._id}}">{{trip.title}}</a></h5>
-                            <p>{{trip.summary}}</p>
+                            <p>{{trip.summary}}</p>-->
                         </div>
                     </div>
                     <!--<div class="col-md-3">-->
