--- a/public/project/client/views/assets/css/examples.css
+++ b/public/project/client/views/assets/css/examples.css
@@ -44,7 +44,7 @@
     color: #FFF;
 }
 .register-background{
-    background-image: url('../paper_img/landscape.jpg');
+    background-color: #000000;
     background-position: center center;
     background-size: cover;
     min-height: 100vh;
@@ -79,7 +79,7 @@
     color: #EB5E28;
 }
 .register-card{
-    background-color: #FF8F5E;
+    background-color: #FFD700;
     border-radius: 8px;
     color: #fff;
     max-width: 350px;
