--- a/public/project/client/views/header/header.view.html
+++ b/public/project/client/views/header/header.view.html
@@ -17,8 +17,9 @@
                     <a href="#/register" class="add-under-line"> Register</a></li>
                 <li ng-hide="currentUser" ng-class="{'active' : $location.url() == '/login'}">
                     <a href="#/login" class="add-under-line">Login</a></li>
-                <li ng-show="currentUser" ng-class="{'active' : $location.url() == '/profile'}">
-                    <a href="#/profile" class="add-under-line"> {{currentUser.username}} </a></li>
+                <li ng-show="currentUser" class="username" ng-class="{'active': $location.url()=='/profile'}">
+                    <a ng-click="visitProfile()">{{currentUser.username}}</a></li>
+
                 <li ng-show="currentUser"><a href="#/home" class="add-under-line" ng-click="logout()">LogOut</a></li>
 
 
