--- a/public/project/client/views/search/search.view.html
+++ b/public/project/client/views/search/search.view.html
@@ -7,7 +7,7 @@
             <h2>Search</h2>
             <input ng-model="model.track" id="trackID" class="form-control" placeholder="Track"/>
             <br>
-            <a class="btn btn-primary" role="button" ng-click="model.searchTrack(model.track)">Search</a>
+            <a class="btn btn-primary form-control" role="button" ng-click="model.searchTrack(model.track)">Search</a>
         </div>
     </div>
 
