--- a/public/project/client/views/users/login.view.html
+++ b/public/project/client/views/users/login.view.html
@@ -23,7 +23,7 @@
 
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
-                    <a class="btn btn-primary" role="button" ng-click="model.login(model.user)">Login</a>
+                    <a class="btn btn-primary form-control" role="button" ng-click="model.login(model.user)">Login</a>
                 </div>
             </div>
 
