--- a/public/project/client/views/users/register.view.html
+++ b/public/project/client/views/users/register.view.html
@@ -38,7 +38,7 @@
 
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <a ng-click="model.register(model.user)" class="btn btn-primary" role="button">Register</a>
+            <a ng-click="model.register(model.user)" class="btn btn-primary form-control" role="button">Register</a>
         </div>
     </div>
 
