--- a/public/project/client/views/details/details.view.html
+++ b/public/project/client/views/details/details.view.html
@@ -1,8 +1,9 @@
 <html>
-<body ng-controller="DetailsController">
-<h1>Track Information</h1>
+<div ng-controller="DetailsController">
+<h1 class="page-header">Track Information</h1>
 
-<div>
+<div class="bg-color"align="center">
+<div >
     <image height="200px" width="200px" ng-src="{{model.details.album.images[1].url}}"></image>
 
 </div>
@@ -12,15 +13,16 @@
 </div>
 
 
-<div>
+<!--<div>
     Id: {{model.details.id}}
-</div>
+</div>-->
 <div>
     Album: {{model.details.album.name}}
 </div>
 
+</div>
 
-<div ng-show="model.user">
+<div class="like-btn" ng-show="model.user" align="center">
 
     <button ng-show="model.liked" class="btn btn-danger"
             ng-click="model.removeLikedSong()">
@@ -31,10 +33,9 @@
             ng-click="model.likeSong()">
         <span class="fa fa-star-o"></span>
     </button>
-
 </div>
 
-<div class="media">
+<div class="media" align="center">
     <div class="media-left">
 
         <audio ng-src="{{model.details.preview_url | trusted}}" audioplayer controls >
@@ -45,7 +46,8 @@
 
 
 
-<div ng-show="model.user">
+
+<div ng-show="model.user" align="center">
     <div ng-show="model.isNewComment">
         <button ng-hide="model.commentFlag" class="btn btn-primary " ng-click="model.commentFlag = !model.commentFlag">Add Comment</button>
     </div>
@@ -54,7 +56,7 @@
     </div>
 </div>
 
-<div ng-show="model.commentFlag">
+<div ng-show="model.commentFlag" align="center">
     <br>
     <label for="userComment">Comment:</label><br>
     <textarea id="userComment"class="form-control" value="" rows="2" ng-model="model.userComment">
@@ -64,7 +66,7 @@
     <button class="btn btn-danger" ng-click="model.commentFlag = !model.commentFlag">Cancel</button>
 </div>
 
-<div class="chat">
+<!--<div>
     <h3 class="comment-div">Comments : </h3>
     <h4 ng-hide="model.comments">No comments </h4>
 
@@ -73,10 +75,48 @@
             <a href="#/profile/{{comment.userID}}">{{comment.username}} : </a> {{comment.comment}}
         </div>
     </div>
-</div>
+</div> -->
+    <h4 class="page-header">Comments </h4>
+    <table class="table table-responsive">
+        <thead>
+        <tr>
+        <th>User</th>
+        <th>Comment</th>
+            <th></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="comment in model.comments">
+        <td><a href="#/profile/{{comment.userID}}">{{comment.username}}</a></td>
+        <td>{{comment.comment}}</td>
+            <td></td>
+        </tr>
+</tbody>
+        </table>
+
 </div>
 </div>
 
 
 </body>
 </html>
+
+<!--
+<table class="table table-striped table-responsive">
+    <thead>
+    <tr>
+        <th>Name of the Track</th>
+        <th>Preview</th>
+        <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr ng-repeat="track in model.searchResult.tracks.items">
+        <td>{{track.name}}</td>
+        <td>
+
+            <a href="#/details/{{track.id}}">Details</a></td>
+        <td></td>
+    </tr>
+    </tbody>
+</table>-->
