--- a/public/project/client/views/home/home.view.html
+++ b/public/project/client/views/home/home.view.html
@@ -3,11 +3,74 @@
 <body>
 
 <div class="container-fluid">
-    <div class="row">
+  <!--  <div class="row">
 
 
             </div>
+
         </div>
+</div>-->
+
+    <div class="container">
+        <br>
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+                <!--<li data-target="#myCarousel" data-slide-to="3"></li>-->
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <img class="img-class" src="../client/views/assets/paper_img/coldplay.gif" alt="coldplay"  >
+                </div>
+
+             <!--   <div class="item">
+                    <img class="img-class" src="../client/views/assets/paper_img/m1.png" alt="meghan" >
+                </div> -->
+
+                <div class="item">
+                    <img class="img-class" src="../client/views/assets/paper_img/maroon5.jpg" alt="Maroon5" >
+                </div>
+
+                <div class="item">
+                    <img class="img-class" src="../client/views/assets/paper_img/katy.png" alt="Katy" >
+                </div>
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+    <!--
+<div style="text-align: center">
+    <div class="w3-card-12 w3-margin w3-hover-shadow pull-right" style="width:20%">
+        <img src="../client/views/assets/paper_img/h2.png" alt="you fav music" style="width:100%">
+        <div class="w3-container w3-center">
+            <p>Your daily update of the most played tracks </p>
+        </div>
+    </div>
+
+    <div class="w3-card-12 w3-margin pull-left" style="width:20%">
+        <img src="../client/views/assets/paper_img/h5.png" alt="you fav music" style="width:100%">
+        <div class="w3-container w3-center">
+            <p>Your daily update of the most played tracks </p>
+        </div>
+    </div>
+
+
+    </div>
+-->
 </div>
 
 </body>
