--- a/public/project/client/views/search/search.view.html
+++ b/public/project/client/views/search/search.view.html
@@ -1,11 +1,11 @@
 <body>
 <div class="container" ng-controller="SearchController">
-    <h1>Search Tracks</h1>
+    <h1 class="page-header">Search Tracks</h1>
 
     <div class="row">
-        <div class="col-xs-6">
-            <h2>Search</h2>
-            <input ng-model="model.track" id="trackID" class="form-control" placeholder="Track"/>
+        <div class="col-xs-6" align="center">
+
+            <input ng-model="model.track" id="trackID" class="form-control" placeholder="Track Name"/>
             <br>
             <a class="btn btn-primary form-control" role="button" ng-click="model.searchTrack(model.track)">Search</a>
         </div>
@@ -13,7 +13,7 @@
 
     <section ng-show="model.searchResult">
         <h3 class="text-uppercase">Track List</h3>
-        <table class="table table-striped table-responsive">
+        <table class="table  table-responsive">
             <thead>
             <tr>
                 <th>Name of the Track</th>
@@ -25,7 +25,7 @@
             <tr ng-repeat="track in model.searchResult.tracks.items">
                 <td>{{track.name}}</td>
                 <td>
-                    <!--<a href="{{track.preview_url}}">Play</a></td>-->
+
                     <a href="#/details/{{track.id}}">Details</a></td>
                 <td></td>
             </tr>
