--- a/public/project/css/dashboard.css
+++ b/public/project/css/dashboard.css
@@ -5,7 +5,40 @@
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
     padding-top: 50px;
+    padding-right: 50px;
+    padding-left: 50px;
+    /*background-color: black;*/
+    background: url("b2.jpg") no-repeat center center fixed;
+    background-color: black;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
 }
+
+
+
+/*.btn-primary {
+    background-color: forestgreen;
+    color: white;
+    font-weight: bold;
+    border: thin;
+
+}
+
+
+.btn-primary:hover {
+    background-color: green;
+    color: white;
+    font-weight: bold;
+    border: thin;
+
+}*/
+
 
 
 /*
@@ -81,6 +114,7 @@ body {
     }
 }
 .main .page-header {
+
     margin-top: 0;
 }
 
@@ -103,3 +137,56 @@ body {
     display: inline-block;
     border-radius: 50%;
 }
+
+
+body {
+    width: 100%;
+    height: 100%;
+    color:whitesmoke;
+
+
+}
+
+.bg-color
+{
+    color: whitesmoke;
+
+}
+
+a:hover {
+    color: yellow;
+}
+
+.search-result{
+    padding-right: 50px;
+    padding-left: 50px;
+}
+
+
+ .carousel-inner > .item > img,
+ .carousel-inner > .item > a > img {
+     width: 70%;
+     margin: auto;
+     height: 800px;
+ }
+
+.item .img-class{
+    width: 300px;
+    height:300px;
+
+}
+
+.like{
+    width: 800px;
+}
+
+.like .like-btn{
+    float: right;
+
+}
+
+
+
+
+
+
