--- a/public/project/css/dashboard.css
+++ b/public/project/css/dashboard.css
@@ -165,7 +165,7 @@ a:hover {
 
  .carousel-inner > .item > img,
  .carousel-inner > .item > a > img {
-     width: 70%;
+     width: 500px;
      margin: auto;
      height: 800px;
  }
