--- a/public/project/client/views/search/search.view.html
+++ b/public/project/client/views/search/search.view.html
@@ -1,15 +1,18 @@
 <body>
 <div class="container" ng-controller="SearchController">
+
     <h1 class="page-header">Search Tracks</h1>
     <div class="row">
-        <div class="col-xs-6" align="center">
+        <div class="col-lg-6" align="center">
+            <div class="form-group">
+            <input ng-model="model.track" id="trackID" class="form-control " placeholder="Track Name"/></div>
 
-            <input ng-model="model.track" id="trackID" class="form-control" placeholder="Track Name"/>
-            <br>
+            <div class="form-group">
             <a class="btn btn-primary form-control" role="button" ng-click="model.searchTrack(model.track)">Search</a>
-        </div>
+        </div></div>
     </div>
 
+<div>
     <section ng-show="model.searchResult">
         <h3 class="text-uppercase">Track List</h3>
         <table class="table  table-responsive">
@@ -30,5 +33,6 @@
             </tbody>
         </table>
     </section>
+</div>
 </div>
 </body>
